--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.0.0",
     "@popperjs/core": "^2.11.8",
     "@types/google.maps": "^3.55.12",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
